* Watch command implemented * Adapted tests to get better results and test thread safety